--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
  <meta name="robots" content="index,follow"> 
   <link rel="canonical" href="https://nailartduck.pages.dev">
+ <meta name="google-site-verification" content="6Gcm3CRkcYXPTZtznZTzWLyUGfDoEo34odb7mS1A5IM" />
   
   <style>
     body {
